   preedit.
 - A parameter cursorPos is added to MAbstractInputMethod::setPreedit().
 - Parameters in MInputMethodHost::sendPreeditString() are changed to accept definitions
   of different formats for each part of preedit, and support to show cursor inside
   preedit.
 - new struct PreeditTextFormat in namespace MInputMethod which defines the text format
   for the preedit string.

0.19.30
=======
* API changes
 - Toolbar specification was changed. Add a new attibute "enabled" for button.
   Check latest version of the specification in the file doc/src/toolbarxml.dox.

0.19.27
=======

* API changes
 - MInputMethodBase was renamed to MAbstractInputMethod
 - MInputMethodSettingsBase was renamed to MAbstractInputMethodSettings
 - Removed region signal from MAbstractInputMethod and replaced them with
   setScreenRegion() and setInputMethodArea() in MAbstractInputMethodHost.
 - renamed in MAbstractInputMethod:
   - mouseClickedOnPreedit() -> handleMouseClickOnPreedit(
   - focusChanged() -> handleFocusChange()
   - visualizationPriorityChanged() -> handleVisualizationPriorityChange
   - appOrientationChanged() -> handleAppOrientationChange()
   - clientChanged -> handleClientChange()

0.19.26
========

* API changes
 - A request type parameter was added to MInputContext::keyEvent to
   allow signal only and event only key events.
 - Similar change to MInputContextConnection::sendKeyEvent and the "keyEvent"
   method in DBUS interface "com.meego.inputmethod.inputcontext1".
 - Removed MInputContextConnection from public API and replaced it with
   MAbstractInputMethodHost for MInputMethodBase.
 - Removed some ...Requsted() signals from MInputMethodBase and replaced with
   methods in MAbstractInputMethodHost
 - Removed indicator setting from MInputMethodBase and replaced with method on
   MAbstractInputMethodHost. Moved the indicator enum to MInputMethod namespace.
 - Changed the D-Bus interface of MIMPluginManager to use meego prefix.

0.19.24
========

* API changes