@@ -68,6 +68,7 @@ public:
     virtual bool hasSelection(bool &valid);
     virtual int inputMethodMode(bool &valid);
     virtual QRect preeditRectangle(bool &valid);
+    virtual QRect cursorRectangle(bool &valid);
     virtual void setRedirectKeys(bool enabled);
     virtual void setDetectableAutoRepeat(bool enabled);
     virtual void copy();
