@@ -1,6 +1,7 @@
 meego-im-framework (0.19.33~1) unstable; urgency=low
 
   * [UNRELEASED]
+  * Changes: support query cursor rectangle from application.
 
  -- huaming wang <huaming.wang@nokia.com>  Fri, 26 Nov 2010 12:31:31 +0200
 
